Push before publication.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,13 @@ Code/ClusterPractice.sh
 Code/Functions/LCSTestXCode/LCSTestXCode.xcodeproj/project.xcworkspace/contents.xcworkspacedata
 Code/Functions/LCSTestXCode/LCSTestXCode.xcodeproj/xcshareddata/xcschemes/LCSTestXCode.xcscheme
 Code/Functions/LCSTestXCode/LCSTestXCode.xcodeproj/xcuserdata/nathanielcoombs.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+Intermediate stuff/FWS07SteelFalls.pdf
+Intermediate stuff/SteelDemoSurrHists.pdf
+Data/SQLTest0.sql
+Data/Coleman.sql
+Data/SQLTest0Dets.csv
+Data/UCD69kHzFMeta.csv
+Data/Releases.csv
+Data/Cull.csv
+Data/ColemanRel.csv
+Data/HatchLocTimeNum.csv
