Working on getting smolts operational
The lil screwballs add local complexity, so I need to overhaul the memory management

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@ Data/HatchLocTimeNum.csv
 *.shp
 *.shx
 *.xml
+*.xcuserstate
+*.pbxproj
+*.pbxproj
+*.xcworkspacedata
+*.plist
+Code/NatLCSMemWiz/NatLCSMemWiz.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
